# RexBDD

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: README.txt  TODO.txt
examples/: CMakeLists.txt  example.cc
src/: CMakeLists.txt  RexBDD.h  defines.h  edge.cc  edge.h  edge_label.cc  edge_label.h  error.cc  error.h  forest.cc  forest.h  function.cc  function.h  hash_stream.h  info.h.in  initializer.cc  initializer.h  io.cc  io.h  lib_manager.cc  lib_manager.h  node.h  node_manager.cc  node_manager.h  node_storage.h  operators.cc  operators.h  packed_node.cc  packed_node.h  revision.h  setting.cc  setting.h  statistics.cc  statistics.h  terminal.h  unique_table.cc  unique_table.h
src/IO/: out_dot.cc  out_dot.h
src/operations/: apply.h  compute_table.cc  compute_table.h  operation.cc  operation.h  operations_generator.cc  operations_generator.h
src/settings/: edge_flags.cc  edge_flags.h  range.cc  range.h  reductions.cc  reductions.h
tests/: CMakeLists.txt  check_edge.cc  test_check.cc  test_nodeman.cc  test_operation.cc  test_reduce.cc  test_setting.cc  test_unique_table.cc
